<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/rl_principal"
    android:layout_above="@+id/rl_secundario">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </include>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_paginacion"
        android:text="@string/paginacion"
        android:layout_below="@+id/activity_my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_segmentacion"
        android:text="@string/segmentacion"
        android:gravity="center"
        android:layout_below="@+id/btn_paginacion"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pag_seg"
        android:text="@string/paginacion_segmentacion"
        android:gravity="center"
        android:layout_below="@+id/btn_segmentacion"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>